updated reduction dim size

--- a/UMM_discovery_BBBC021.ipynb
+++ b/UMM_discovery_BBBC021.ipynb
@@ -158,7 +158,7 @@
     "    dim_method = 'PCA' \n",
     "    \n",
     "    # dimensions after reduction\n",
-    "    n_components = 16\n",
+    "    n_components = 2 #here? 16 -> 2\n",
     "    \n",
     "    # clustering algorithm (default: Kmeans)\n",
     "    # 'Kmeans' or 'AdaptiveKmeans' or 'PIC' or 'HDBscan' \n",
